--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -20,4 +21,6 @@ header input{
 
 .news_item {
     background: red;
+    box-sizing: border-box;
+    border-bottom: 1px solid grey;
 }
